CloudFormation/ec2-pseudo.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "CloudFormation Template to launch EC2 instance.",
    "Resources": {
        "MyEC2Instance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "InstanceType": "t3.medium",
                "ImageId": "ami-01f5494a7d7269e37",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [
                            " ", [
                                "Instance", "using", "JSON", "Template", "Join", "Fn"
                            ]
                        ]
                        }
                    }
                ],
                "SecurityGroups": [
                    { 
                        "Ref": "SSHHTTPSecurityGroup"
                    }
                ]
            }
        },
        "SSHHTTPSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": {"Fn::Join": [
                    " ", [ "Enable SSH and HTTP Access in", {"Ref":"AWS::Region"} ]
                ]
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "TCP",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "TCP",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "TCP",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    }
                    ],
                "Tags": [
                        {
                            "Key": "Name",
                            "Value": "SSH-HTTP-SG"
                        }
                    ]
            }
        }
    }
}
