CloudFormation/ec2-withSGdepend.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "CloudFormation Template to launch EC2 instance.",
    "Resources": {
        "MyEC2Instance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "InstanceType": "t3.medium",
                "ImageId": "ami-01f5494a7d7269e37",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Instance using JSON Template"
                    }
                ],
                "SecurityGroups": [
                    { 
                        "Ref": "SSHHTTPSecurityGroup"
                    }
                ]
            }
        },
        "SSHHTTPSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable SSH and HTTP Access",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "TCP",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "TCP",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "TCP",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    }
                    ],
                "Tags": [
                        {
                            "Key": "Name",
                            "Value": "SSH-HTTP-SG"
                        }
                    ]
            }
        }
    }
}
